# BeSecure-

./: .env  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: config.py  main.py
backend/agents/: state.py  workflow.py
backend/agents/nodes/: ingestion.py  knowledge.py  remediation.py  report_gen.py  risk_scoring.py  static_analysis.py  threat_model.py
backend/api/routes/: health.py  report.py  scan.py
backend/llm/: client.py
backend/models/: schema.py
backend/rag/: vectorstore.py
backend/rag/seed_data/owasp/: owasp_mobile_top10.txt
backend/rag/seed_data/sdlc/: secure_sdlc_coding.txt
backend/services/: decompiler.py  file_handler.py  mobsf.py  static_analyzer.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Navbar.module.css  Navbar.tsx  RiskGauge.module.css  RiskGauge.tsx  VulnCard.module.css  VulnCard.tsx  VulnChart.module.css  VulnChart.tsx
frontend/src/pages/: AllScansPage.module.css  AllScansPage.tsx  ReportPage.module.css  ReportPage.tsx  ScanPage.module.css  ScanPage.tsx  UploadPage.module.css  UploadPage.tsx
reports/: 9f24b3a8-0832-4326-8de8-b5ae86298872.json  cee3d8b3-52e5-4d11-95c2-27e0c2164eab.json
uploads/9f24b3a8-0832-4326-8de8-b5ae86298872/extracted/feature-transhipment-unloading/src/androidTest/java/com/tnd_psm/feature_transhipment_unloading/: ExampleInstrumentedTest.kt
(+25 files in other folders)
