[project]
name = "besecure"
version = "0.1.0"
description = "AI-Powered Android Application Security Analysis System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # LangGraph / LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.0",

    # Vector DB (RAG)
    "chromadb>=0.5.0",

    # PDF ingestion for RAG
    "pypdf>=4.0.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Async & task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "python-jose[cryptography]>=3.3.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
